# C_language_training

./: CMakeLists.txt  README.md
NGFW/: CMakeLists.txt  README.md
NGFW/src/: main.c  setings.h
NGFW/src/net/: connection_handler.c  connection_handler.h  server.c  server.h  socket_io.c  socket_io.h
NGFW/src/uthash/: utstring.h
NGFW/src/utility/: string_replacement.c  string_replacement.h
NGFW2/NGFW/: CMakeLists.txt  README.md
NGFW2/NGFW/src/: main.c  main.h
NGFW2/NGFW/src/service/: SocketData.h  SocketTcpListener.c  SocketTcpListener.h  SocketTcpSender.c  SocketTcpSender.h
NGFW2/NGFW/src/thread/: threadListen.c  threadListen.h  threadSend.c  threadSend.h  threadSendToCarbon.c  threadSendToCarbon.h
NGFW2/NGFW/src/thread_value/: counters.h  gauges.h  stats.c  stats.h  timers.h
NGFW2/NGFW/src/uthash/: utarray.h  uthash.h  utlist.h
leson1/: main2.c  main3.c  main4.c
leson10/: main1.c  main2.c  main3.c  main4.c  main5.c  main6.c  main7.c  main8.c  main9.c
leson11/: main1.c  main2.c  main3.c  main4.c  main5.c  main6.c  main7.c  main8.c  main9.c  mainTest.c  mainTestBeep.c
leson12/: main4.c  main5.c  main6.c  main7.c  main8.c  main9.c
leson13/: main1.c  main2.c  main3.c  main4.c  main5.c
leson14/: Makefile  dataset.csv  temp_api.c  temp_api.h  temp_functions.c
leson14_kr/: Makefile  dataset.csv  main1.c  temp_api.c  temp_api.h  temp_functions.c  temp_functions.h
leson6/: main1.c  main2.c  main3.c  main4.c  main5.c  test.c
leson7/: main1.c  main10.c  main11.c  main2.c  main3.c  main4.c  main5.c  main6.c  main7.c  main8.c  main9.c
leson8/: main1.c  main10.c  main11.c  main12.c  main13.c  main14.c  main15.c  main2.c  main3.c  main4.c  main5.c  main6.c  main7.c  main8.c  main9.c
leson9/: main1.c  main2.c  main3.c  main4.c  main5.c  main6.c  main7.c  main8.c  main9.c
test_hex/: main1.c
