cmake_minimum_required(VERSION 3.26)
project(C_language_training C)

set(CMAKE_C_STANDARD 11)

add_executable(leson1main1 leson1/main1.c)
add_executable(leson1main2 leson1/main2.c)
add_executable(leson1main3 leson1/main3.c)
add_executable(leson1main4 leson1/main4.c)

add_executable(leson6test leson6/test.c)
add_executable(leson6main1 leson6/main1.c)
add_executable(leson6main2 leson6/main2.c)
add_executable(leson6main3 leson6/main3.c)
add_executable(leson6main4 leson6/main4.c)
add_executable(leson6main5 leson6/main5.c)

add_executable(leson7main1 leson7/main1.c)
add_executable(leson7main2 leson7/main2.c)
add_executable(leson7main3 leson7/main3.c)
add_executable(leson7main4 leson7/main4.c)
add_executable(leson7main5 leson7/main5.c)
add_executable(leson7main6 leson7/main6.c)
add_executable(leson7main7 leson7/main7.c)
add_executable(leson7main8 leson7/main8.c)
add_executable(leson7main9 leson7/main9.c)
add_executable(leson7main10 leson7/main10.c)
add_executable(leson7main11 leson7/main11.c)
