cmake_minimum_required(VERSION 3.26)
project(C_language_training C)

set(CMAKE_C_STANDARD 11)

add_executable(leson1main1 leson1/main1.c
        leson8/main7.c)
add_executable(leson1main2 leson1/main2.c)
add_executable(leson1main3 leson1/main3.c)
add_executable(leson1main4 leson1/main4.c)

add_executable(leson6test leson6/test.c)
add_executable(leson6main1 leson6/main1.c)
add_executable(leson6main2 leson6/main2.c)
add_executable(leson6main3 leson6/main3.c)
add_executable(leson6main4 leson6/main4.c)
add_executable(leson6main5 leson6/main5.c)

add_executable(leson7main1 leson7/main1.c)
add_executable(leson7main2 leson7/main2.c)
add_executable(leson7main3 leson7/main3.c)
add_executable(leson7main4 leson7/main4.c)
add_executable(leson7main5 leson7/main5.c)
add_executable(leson7main6 leson7/main6.c)
add_executable(leson7main7 leson7/main7.c)
add_executable(leson7main8 leson7/main8.c)
add_executable(leson7main9 leson7/main9.c)
add_executable(leson7main10 leson7/main10.c)
add_executable(leson7main11 leson7/main11.c)


add_executable(leson8main1 leson8/main1.c)
add_executable(leson8main2 leson8/main2.c)
add_executable(leson8main3 leson8/main3.c)
add_executable(leson8main4 leson8/main4.c)
add_executable(leson8main5 leson8/main5.c)
add_executable(leson8main6 leson8/main6.c)
add_executable(leson8main7 leson8/main7.c)
add_executable(leson8main8 leson8/main8.c)
add_executable(leson8main9 leson8/main9.c)
add_executable(leson8main10 leson8/main10.c)
add_executable(leson8main11 leson8/main11.c)
add_executable(leson8main12 leson8/main12.c)
add_executable(leson8main13 leson8/main13.c)
add_executable(leson8main14 leson8/main14.c)
add_executable(leson8main15 leson8/main15.c)
add_executable(leson8main16 leson8/main16.c)
