cmake_minimum_required(VERSION 3.26)
project(C_language_training C)

set(CMAKE_C_STANDARD 11)

add_executable(leson1main1 leson1/main1.c)
add_executable(leson1main2 leson1/main2.c)
add_executable(leson1main3 leson1/main3.c)
add_executable(leson1main4 leson1/main4.c)

add_executable(leson6test leson6/test.c)
add_executable(leson6main1 leson6/main1.c)
add_executable(leson6main2 leson6/main2.c)
add_executable(leson6main3 leson6/main3.c)
add_executable(leson6main4 leson6/main4.c)
add_executable(leson6main5 leson6/main5.c)

add_executable(leson7main1 leson7/main1.c)
add_executable(leson7main2 leson7/main2.c)
add_executable(leson7main3 leson7/main3.c)
add_executable(leson7main4 leson7/main4.c)
add_executable(leson7main5 leson7/main5.c)
add_executable(leson7main6 leson7/main6.c)
add_executable(leson7main7 leson7/main7.c)
add_executable(leson7main8 leson7/main8.c)
add_executable(leson7main9 leson7/main9.c)
add_executable(leson7main10 leson7/main10.c)
add_executable(leson7main11 leson7/main11.c)

add_executable(leson8main1 leson8/main1.c)
add_executable(leson8main2 leson8/main2.c)
add_executable(leson8main3 leson8/main3.c)
add_executable(leson8main4 leson8/main4.c)
add_executable(leson8main5 leson8/main5.c)
add_executable(leson8main6 leson8/main6.c)
add_executable(leson8main7 leson8/main7.c)
add_executable(leson8main8 leson8/main8.c)
add_executable(leson8main9 leson8/main9.c)
add_executable(leson8main10 leson8/main10.c)
add_executable(leson8main11 leson8/main11.c)
add_executable(leson8main12 leson8/main12.c)
add_executable(leson8main13 leson8/main13.c)
add_executable(leson8main14 leson8/main14.c)
add_executable(leson8main15 leson8/main15.c)


add_executable(leson9main1 leson9/main1.c)
add_executable(leson9main2 leson9/main2.c)
add_executable(leson9main3 leson9/main3.c)
add_executable(leson9main4 leson9/main4.c)
add_executable(leson9main5 leson9/main5.c)
add_executable(leson9main6 leson9/main6.c)
add_executable(leson9main7 leson9/main7.c)
add_executable(leson9main8 leson9/main8.c)
add_executable(leson9main9 leson9/main9.c)



add_executable(leson10main1 leson10/main1.c)
add_executable(leson10main2 leson10/main2.c)
add_executable(leson10main3 leson10/main3.c)
add_executable(leson10main4 leson10/main4.c)
add_executable(leson10main5 leson10/main5.c)
add_executable(leson10main6 leson10/main6.c)
add_executable(leson10main7 leson10/main7.c)
add_executable(leson10main8 leson10/main8.c)
add_executable(leson10main9 leson10/main9.c)




add_executable(leson11main3 leson11/mainTest.c)
add_executable(leson11main4 leson11/main4.c)
add_executable(leson11main5 leson11/main5.c)
add_executable(leson11main6 leson11/main6.c)
add_executable(leson11main7 leson11/main7.c)
add_executable(leson11main8 leson11/main8.c)
add_executable(leson11main9 leson11/main9.c)

add_executable(leson11mainTestBeep leson11/mainTestBeep.c)


add_executable(leson12main4 leson12/main4.c)
add_executable(leson12main5 leson12/main5.c)
add_executable(leson12main6 leson12/main6.c)
add_executable(leson12main7 leson12/main7.c)
add_executable(leson12main8 leson12/main8.c)
add_executable(leson12main9 leson12/main9.c)





add_executable(leson13main1 leson13/main1.c)
add_executable(leson13main2 leson13/main2.c)
add_executable(leson13main3 leson13/main3.c)
add_executable(leson13main4 leson13/main4.c)
add_executable(leson13main5 leson13/main5.c)



add_executable(leson14main1
        leson14/main1.c
        leson14/temp_api.c
        leson14/temp_functions.c
)





